gitignore: Add trailing slashes to directory patterns
This makes it explicit that they're meant to ignore entire
directories rather than single files.

Signed-off-by: Andrea Bolognani <abologna@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,10 @@
 *Makefile
 *Makefile.in
 *~
-.deps
-.libs
-.pytest_cache
-__pycache__
+.deps/
+.libs/
+.pytest_cache/
+__pycache__/
 vgcore.*
 
 /AUTHORS
