Install daemon under @sbindir@
The libvirt-dbus daemon is not supposed to be invoked
explicitly by the user, but rather to be spawned on-demand
by the D-Bus daemon: as such, @sbindir@ is a more suitable
location in which to install it.

Signed-off-by: Andrea Bolognani <abologna@redhat.com>
Reviewed-by: Pavel Hrdina <phrdina@redhat.com>

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -63,12 +63,12 @@ CLEANFILES = \
 
 session/org.libvirt.service: session/org.libvirt.service.in
 	$(AM_V_GEN)$(MKDIR_P) session && \
-		sed -e 's|[@]bindir[@]|$(bindir)|g' < $< > $@-t && \
+		sed -e 's|[@]sbindir[@]|$(sbindir)|g' < $< > $@-t && \
 			mv $@-t $@
 
 system/org.libvirt.service: system/org.libvirt.service.in
 	$(AM_V_GEN)$(MKDIR_P) system && \
-		sed -e 's|[@]bindir[@]|$(bindir)|g' \
+		sed -e 's|[@]sbindir[@]|$(sbindir)|g' \
 		    -e 's|[@]SYSTEM_USER[@]|$(SYSTEM_USER)|' \
 			< $< > $@-t && mv $@-t $@
 
