Add syntax-check target in Makefile.am
For now syntax checking is performed only on the python
files using flake8.

E501: (line too long) warning is ignored.

Signed-off-by: Katerina Koukiou <kkoukiou@redhat.com>
Reviewed-by: Ján Tomko <jtomko@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -42,3 +42,10 @@ gen-AUTHORS:
 	  mv -f $(distdir)/AUTHORS-tmp $(distdir)/AUTHORS && \
 	  rm -f all.list maint.list contrib.list; \
 	fi
+
+# E501: (line too long) warning is ignored.
+.PHONY: flake8
+flake8:
+	flake8 --show-source --ignore=E501
+
+syntax-check: flake8
