configure: Call PKG_CHECK_MODULES() correctly
Most of the calls where missing the dollar sign when
referencing variables, which caused the corresponding
version checks to be skipped.

Signed-off-by: Andrea Bolognani <abologna@redhat.com>
Reviewed-by: Ján Tomko <jtomko@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -37,10 +37,10 @@ AM_PROG_CC_C_O
 AC_PROG_CC_STDC
 AC_PROG_LIBTOOL
 
-PKG_CHECK_MODULES([GIO2], [gio-unix-2.0 >= GLIB2_REQUIRED])
-PKG_CHECK_MODULES([GLIB2], [glib-2.0 >= GLIB2_REQUIRED])
+PKG_CHECK_MODULES([GIO2], [gio-unix-2.0 >= $GLIB2_REQUIRED])
+PKG_CHECK_MODULES([GLIB2], [glib-2.0 >= $GLIB2_REQUIRED])
 PKG_CHECK_MODULES([LIBVIRT], [libvirt >= $LIBVIRT_REQUIRED])
-PKG_CHECK_MODULES([LIBVIRT_GLIB], [libvirt-glib-1.0 >= LIBVIRT_GLIB_REQUIRED])
+PKG_CHECK_MODULES([LIBVIRT_GLIB], [libvirt-glib-1.0 >= $LIBVIRT_GLIB_REQUIRED])
 
 LIBVIRT_COMPILE_WARNINGS
 LIBVIRT_LINKER_RELRO
