configure: Detect flake8 automatically
This also allows the user to run a custom flake8
by setting FLAKE8 in the environment.

Signed-off-by: Andrea Bolognani <abologna@redhat.com>
Reviewed-by: Ján Tomko <jtomko@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -46,6 +46,6 @@ gen-AUTHORS:
 # E501: (line too long) warning is ignored.
 .PHONY: flake8
 flake8:
-	flake8 --show-source --ignore=E501 $(srcdir)
+	$(FLAKE8) --show-source --ignore=E501 $(srcdir)
 
 syntax-check: flake8
