--- a/configure.ac
+++ b/configure.ac
@@ -36,6 +36,7 @@ AC_PROG_MKDIR_P
 AM_PROG_CC_C_O
 AC_PROG_CC_STDC
 AC_PROG_LIBTOOL
+AC_PATH_PROGS([FLAKE8], [flake8])
 
 PKG_CHECK_MODULES([GIO2], [gio-unix-2.0 >= $GLIB2_REQUIRED])
 PKG_CHECK_MODULES([GLIB2], [glib-2.0 >= $GLIB2_REQUIRED])
