Introduce Domain Snapshot Interface
Signed-off-by: Simon Kobyda <skobyda@redhat.com>

--- a/data/meson.build
+++ b/data/meson.build
@@ -1,6 +1,7 @@
 install_data(
     'org.libvirt.Connect.xml',
     'org.libvirt.Domain.xml',
+    'org.libvirt.DomainSnapshot.xml',
     'org.libvirt.Interface.xml',
     'org.libvirt.Network.xml',
     'org.libvirt.NodeDevice.xml',
