AUTHORS: Convert to reStructuredText
Like NEWS, this was very close to being a valid Markdown document
before, and now it's a valid reStructuredText one.

Signed-off-by: Andrea Bolognani <abologna@redhat.com>
Reviewed-by: Erik Skultety <eskultet@redhat.com>
Reviewed-by: Pavel Hrdina <phrdina@redhat.com>

--- a/meson.build
+++ b/meson.build
@@ -256,11 +256,11 @@ if git
     authors = run_command('tools/gen-authors.sh')
     configure_file(
         configuration: { 'contributorslist': authors.stdout() },
-        input: 'AUTHORS.in',
-        output: 'AUTHORS',
+        input: 'AUTHORS.rst.in',
+        output: 'AUTHORS.rst',
     )
 
-    foreach file : [ 'libvirt-dbus.spec', 'AUTHORS' ]
+    foreach file : [ 'libvirt-dbus.spec', 'AUTHORS.rst' ]
         meson.add_dist_script('tools/dist.sh', meson.build_root(), file)
     endforeach
 endif
