man: Convert to reStructuredText
All the documentation for libvirt-dbus is now written in the
same language.

Signed-off-by: Andrea Bolognani <abologna@redhat.com>
Reviewed-by: Erik Skultety <eskultet@redhat.com>
Reviewed-by: Pavel Hrdina <phrdina@redhat.com>

--- a/docs/meson.build
+++ b/docs/meson.build
@@ -1,8 +1,8 @@
-prog_pod2man = find_program('pod2man')
+prog_rst2man = find_program('rst2man')
 
 configure_file(
-    command: [prog_pod2man.path(), '-s 8', '@INPUT@', '@OUTPUT@'],
-    input: 'libvirt-dbus.pod',
+    command: [prog_rst2man.path(), '@INPUT@', '@OUTPUT@'],
+    input: 'libvirt-dbus.rst',
     output: 'libvirt-dbus.8',
     install_dir: join_paths (get_option('mandir'), 'man8'),
 )
