meson: Install documentation
People who install the RPM packages already get this, but it's
good practice so let's make it happen for those who install from
source as well.

The process is straightforward, but we have to be a bit careful
with AUTHORS because this specific file is found in different
directories depending on whether we're building from git or from
a release.

Signed-off-by: Andrea Bolognani <abologna@redhat.com>
Reviewed-by: Pavel Hrdina <phrdina@redhat.com>

--- a/meson.build
+++ b/meson.build
@@ -12,6 +12,7 @@ project(
 prefix = get_option('prefix')
 datadir = prefix / get_option('datadir')
 sbindir = prefix / get_option('sbindir')
+docdir = datadir / 'doc' / meson.project_name()
 
 opt_dirs = [
     'dbus_interfaces',
@@ -258,12 +259,29 @@ if git
         configuration: { 'contributorslist': authors.stdout() },
         input: 'AUTHORS.rst.in',
         output: 'AUTHORS.rst',
+        install_dir: docdir,
     )
 
     foreach file : [ 'libvirt-dbus.spec', 'AUTHORS.rst' ]
         meson.add_dist_script('tools/dist.sh', meson.build_root(), file)
     endforeach
 endif
+
+
+# Install documentation
+
+docs = [
+    'COPYING',
+    'NEWS.rst',
+]
+if not git
+    docs += ['AUTHORS.rst']
+endif
+
+install_data(
+    docs,
+    install_dir: docdir,
+)
 
 
 # Include sub-directories
