spec: Install fewer documentation files
The information contained in README is either redundant or
already covered by the package metadata, so it's pointless to
include this file.

Similarly, HACKING only makes sense as a companion to the source
code, and can thus be left out of the binary package.

Signed-off-by: Andrea Bolognani <abologna@redhat.com>
Reviewed-by: Erik Skultety <eskultet@redhat.com>
Reviewed-by: Pavel Hrdina <phrdina@redhat.com>

--- a/libvirt-dbus.spec.in
+++ b/libvirt-dbus.spec.in
@@ -50,7 +50,7 @@ getent passwd %{system_user} >/dev/null || \
 exit 0
 
 %files
-%doc README.md HACKING.md AUTHORS NEWS
+%doc AUTHORS NEWS
 %license COPYING
 %{_sbindir}/libvirt-dbus
 %{_datadir}/dbus-1/services/org.libvirt.service
