--- a/libvirt-dbus.spec.in
+++ b/libvirt-dbus.spec.in
@@ -50,7 +50,9 @@ getent passwd %{system_user} >/dev/null || \
 exit 0
 
 %files
-%doc AUTHORS.rst NEWS.rst
+%doc %{_docdir}/%{name}/AUTHORS.rst
+%doc %{_docdir}/%{name}/NEWS.rst
+%exclude %{_docdir}/%{name}/COPYING
 %license COPYING
 %{_sbindir}/libvirt-dbus
 %{_datadir}/dbus-1/services/org.libvirt.service
