spec: Pick documentation from source directory
We will stop installing documentation very soon, at which point we
will not longer be able to pick it from the installation directory.

This reverts commit 651f43f5e4a88bdbe8bbb6f7fa5f44b5c176ade8.

Signed-off-by: Andrea Bolognani <abologna@redhat.com>

--- a/libvirt-dbus.spec.in
+++ b/libvirt-dbus.spec.in
@@ -50,9 +50,7 @@ getent passwd %{system_user} >/dev/null || \
 exit 0
 
 %files
-%doc %{_docdir}/%{name}/AUTHORS.rst
-%doc %{_docdir}/%{name}/NEWS.rst
-%exclude %{_docdir}/%{name}/COPYING
+%doc AUTHORS.rst NEWS.rst
 %license COPYING
 %{_sbindir}/libvirt-dbus
 %{_datadir}/dbus-1/services/org.libvirt.service
