docs/meson: fix rst2man detection
In libvirt project we use python3 version exclusively so we should do
the same in libvirt-dbus.  This means that we have to check other
possible command names.

Signed-off-by: Pavel Hrdina <phrdina@redhat.com>
Reviewed-by: Daniel P. Berrangé <berrange@redhat.com>

--- a/docs/meson.build
+++ b/docs/meson.build
@@ -1,4 +1,4 @@
-prog_rst2man = find_program('rst2man')
+prog_rst2man = find_program('rst2man', 'rst2man.py', 'rst2man-3')
 
 configure_file(
     command: [prog_rst2man.path(), '@INPUT@', '@OUTPUT@'],
