--- a/libvirt-dbus.spec.in
+++ b/libvirt-dbus.spec.in
@@ -19,7 +19,11 @@ BuildRequires: meson >= %{meson_version}
 BuildRequires: glib2-devel >= %{glib2_version}
 BuildRequires: libvirt-devel >= %{libvirt_version}
 BuildRequires: libvirt-glib-devel >= %{libvirt_glib_version}
-BuildRequires: /usr/bin/rst2man
+%if 0%{?rhel} == 7
+BuildRequires: python36-docutils
+%else
+BuildRequires: python3-docutils
+%endif
 
 Requires: dbus
 Requires: glib2 >= %{glib2_version}
