--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,13 +25,14 @@ stages:
   export MAKEFLAGS="-j$(getconf _NPROCESSORS_ONLN)"
   export SCRATCH_DIR="/tmp/scratch"
   export VROOT="$SCRATCH_DIR/vroot"
+  export LIBDIR="$VROOT/lib"
   export CCACHE_DIR="$PWD/ccache"
   export CCACHE_MAXSIZE="500M"
   export PATH="$CCACHE_WRAPPERSDIR:$VROOT/bin:$PATH"
-  export PKG_CONFIG_PATH="$VROOT/lib/pkgconfig"
+  export PKG_CONFIG_PATH="$LIBDIR/pkgconfig"
+  export LD_LIBRARY_PATH="$LIBDIR"
   export XDG_DATA_DIRS="$VROOT/share:/usr/share"
-  export GI_TYPELIB_PATH="$VROOT/lib/girepository-1.0"
-  export LD_LIBRARY_PATH="$VROOT/lib"
+  export GI_TYPELIB_PATH="$LIBDIR/girepository-1.0"
 
 .git_native_build_job_template: &git_native_build_job_definition
   image: $CI_REGISTRY_IMAGE/ci-$NAME:latest
@@ -48,11 +49,10 @@ stages:
     - cd "$SCRATCH_DIR"
     - git clone --depth 1 https://gitlab.com/libvirt/libvirt.git
     - git clone --depth 1 https://gitlab.com/libvirt/libvirt-glib.git
-    - mkdir libvirt/build
-    - cd libvirt/build
-    - ../autogen.sh --prefix="$VROOT" --without-libvirtd
-    - $MAKE install
-    - cd ../..
+    - cd libvirt
+    - meson build -Ddriver_libvirtd=disabled "--prefix=$VROOT" "--libdir=$LIBDIR"
+    - ninja -C build install
+    - cd ..
     - mkdir libvirt-glib/build
     - cd libvirt-glib/build
     - ../autogen.sh --prefix="$VROOT"
@@ -123,11 +123,6 @@ x64-centos-stream-container:
   variables:
     NAME: centos-stream
 
-x64-debian-9-container:
-  <<: *container_job_definition
-  variables:
-    NAME: debian-9
-
 x64-debian-10-container:
   <<: *container_job_definition
   variables:
@@ -181,16 +176,13 @@ x64-centos-8-git-build:
   <<: *git_native_build_job_definition
   variables:
     NAME: centos-8
+    RPM: skip
 
 x64-centos-stream-git-build:
   <<: *git_native_build_job_definition
   variables:
     NAME: centos-stream
-
-x64-debian-9-dist-build:
-  <<: *dist_native_build_job_definition
-  variables:
-    NAME: debian-9
+    RPM: skip
 
 x64-debian-10-dist-build:
   <<: *dist_native_build_job_definition
@@ -206,6 +198,7 @@ x64-fedora-31-dist-build:
   <<: *dist_native_build_job_definition
   variables:
     NAME: fedora-31
+    RPM: skip
 
 x64-fedora-32-dist-build:
   <<: *dist_native_build_job_definition
