systemd: use SupplementaryGroups in service files
On Ubuntu libvirt is not compiled with polkit and libvirt-dbus fails to connect
to libvirtd with permission denied. In order to address that issue maintainers
can configure libvirt unix socker group which is added to SupplementaryGroups.

See https://bugs.launchpad.net/ubuntu/+source/libvirt-dbus/+bug/1892756

Reviewed-by: Pavel Hrdina <phrdina@redhat.com>
Signed-off-by: Katerina Koukiou <kkoukiou@redhat.com>

--- a/data/system/libvirt-dbus.service.in
+++ b/data/system/libvirt-dbus.service.in
@@ -6,6 +6,7 @@ BusName=org.libvirt
 DynamicUser=yes
 User=@SYSTEM_USER@
 Group=@SYSTEM_USER@
+SupplementaryGroups=@UNIX_SOCKET_GROUP@
 ExecStart=@sbindir@/libvirt-dbus --system
 
 [Install]
