--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ stages:
 .container_job_template: &container_job_definition
   image: docker:stable
   stage: containers
+  needs: []
   services:
     - docker:dind
   before_script:
@@ -102,6 +103,7 @@ stages:
 check-dco:
   stage: prebuild
   image: registry.gitlab.com/libvirt/libvirt-ci/check-dco:master
+  needs: []
   script:
     - /check-dco
   except:
@@ -167,6 +169,8 @@ x64-ubuntu-2004-container:
 
 x64-centos-7-dist-build:
   <<: *dist_native_build_job_definition
+  needs:
+    - x64-centos-7-container
   variables:
     NAME: centos-7
     TESTS: skip
@@ -174,54 +178,74 @@ x64-centos-7-dist-build:
 
 x64-centos-8-git-build:
   <<: *git_native_build_job_definition
+  needs:
+    - x64-centos-8-container
   variables:
     NAME: centos-8
     RPM: skip
 
 x64-centos-stream-git-build:
   <<: *git_native_build_job_definition
+  needs:
+    - x64-centos-stream-container
   variables:
     NAME: centos-stream
     RPM: skip
 
 x64-debian-10-dist-build:
   <<: *dist_native_build_job_definition
+  needs:
+    - x64-debian-10-container
   variables:
     NAME: debian-10
 
 x64-debian-sid-dist-build:
   <<: *dist_native_build_job_definition
+  needs:
+    - x64-debian-sid-container
   variables:
     NAME: debian-sid
 
 x64-fedora-31-dist-build:
   <<: *dist_native_build_job_definition
+  needs:
+    - x64-fedora-31-container
   variables:
     NAME: fedora-31
     RPM: skip
 
 x64-fedora-32-dist-build:
   <<: *dist_native_build_job_definition
+  needs:
+    - x64-fedora-32-container
   variables:
     NAME: fedora-32
 
 x64-fedora-rawhide-dist-build:
   <<: *dist_native_build_job_definition
+  needs:
+    - x64-fedora-rawhide-container
   variables:
     NAME: fedora-rawhide
 
 x64-opensuse-151-dist-build:
   <<: *dist_native_build_job_definition
+  needs:
+    - x64-opensuse-151-container
   variables:
     NAME: opensuse-151
     RPM: skip
 
 x64-ubuntu-1804-dist-build:
   <<: *dist_native_build_job_definition
+  needs:
+    - x64-ubuntu-1804-container
   variables:
     NAME: ubuntu-1804
 
 x64-ubuntu-2004-dist-build:
   <<: *dist_native_build_job_definition
+  needs:
+    - x64-ubuntu-2004-container
   variables:
     NAME: ubuntu-2004
