ci: use dist dependencies on CentOS 8
Now that lcitool enables Advanced Virtualization repository on CentOS 8
we can build libvirt-dbus using distribution dependencies because we
finally have libvirt-gobject-devel package available.

Signed-off-by: Pavel Hrdina <phrdina@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -176,8 +176,8 @@ x64-centos-7-dist-build:
     TESTS: skip
     RPM: skip
 
-x64-centos-8-git-build:
-  <<: *git_native_build_job_definition
+x64-centos-8-dist-build:
+  <<: *dist_native_build_job_definition
   needs:
     - x64-centos-8-container
   variables:
