meson: honour meson warning_level setting
Currently we ignore the meson warning_level setting and always add all
extra compiler flags, including -Wall/-Wextra which meson adds itself.
The latter causes meson to issue warnings about the duplication:

  meson.build:248: WARNING: Consider using the built-in warning_level option instead of using "-Wall".
  meson.build:247: WARNING: Consider using the built-in warning_level option instead of using "-Wextra".

In meson the warning levels correspond thus:

 0: no warning flags
 1: -Wall
 2: -Wall -Wextra
 3: -Wall -Wextra -Wpedantic

Semantically we can consider that our extra set of warning flags ought
to apply at level 2 or great. -Wpedantic is unusable, so we can ignore
warning level 3 entirely.

IOW, we should only add our extra compiler flags at warning_level==2
and when doing so we can drop the flags meson already sets.

Note, -W is an alias of -Wextra so this was already redundant.

Signed-off-by: Daniel P. Berrangé <berrange@redhat.com>

--- a/meson.build
+++ b/meson.build
@@ -6,6 +6,7 @@ project(
     default_options: [
         'buildtype=debugoptimized',
         'c_std=gnu99',
+        'warning_level=2',
     ],
 )
 
@@ -80,11 +81,9 @@ common_flags = [
     '-DVIRT_DBUS_INTERFACES_DIR="@0@"'.format(dbus_interfaces_dir),
 ]
 
-cc_flags = [
-    '-W',
+warn_flags = [
     '-Waddress',
     '-Waggressive-loop-optimizations',
-    '-Wall',
     '-Warray-bounds=2',
     '-Wattributes',
     '-Wbad-function-cast',
@@ -107,7 +106,6 @@ cc_flags = [
     '-Wduplicated-cond',
     '-Wempty-body',
     '-Wendif-labels',
-    '-Wextra',
     '-Wformat',
     '-Wformat-contains-nul',
     '-Wformat-extra-args',
@@ -218,23 +216,30 @@ cc_flags = [
     '-fipa-pure-const',
     '-fno-common',
 ]
+
+cc_flags = []
+if get_option('warning_level') == '2'
+    cc_flags += warn_flags
+    if git
+        cc_flags += ['-Werror']
+    endif
+
+    if host_machine.cpu_family() != 'aarch64'
+        if host_machine.system() == 'linux'
+            cc_flags += ['-fstack-protector-strong']
+        endif
+        if host_machine.system() == 'freebsd'
+            cc_flags += ['-fstack-protector']
+        endif
+    endif
+endif
+
 ld_flags = [
     '-Wl,-z,now',
     '-Wl,-z,relro',
 ]
 
-if git
-    cc_flags += ['-Werror']
-endif
 
-if host_machine.cpu_family() != 'aarch64'
-    if host_machine.system() == 'linux'
-        cc_flags += ['-fstack-protector-strong']
-    endif
-    if host_machine.system() == 'freebsd'
-        cc_flags += ['-fstack-protector']
-    endif
-endif
 
 if host_machine.system() not in ['cygwin', 'windows']
     cc_flags += ['-fPIE', '-DPIE']
