meson: Fix systemd services install when --prefix was specified
The install destination is always loaded from a specific systemd
dependency object's pkg config variable. This breaks simple --prefix
builds/installs because the installation would fail with the
following:

    Installing <git_path>/build/data/session/libvirt-dbus.service to \
        /usr/lib/systemd/user
    Installation failed due to insufficient permissions.
    Attempting to use polkit to gain elevated privileges...
    Error executing command as another user: Not authorized

Signed-off-by: Erik Skultety <eskultet@redhat.com>

--- a/meson.build
+++ b/meson.build
@@ -23,9 +23,9 @@ else
     init_script = get_option('init_script')
 endif
 if init_script == 'systemd'
-    systemd_dep = dependency('systemd')
-    systemd_user_unit_dir = systemd_dep.get_pkgconfig_variable('systemduserunitdir')
-    systemd_system_unit_dir = systemd_dep.get_pkgconfig_variable('systemdsystemunitdir')
+    systemd_base_unit_dir = prefix / 'lib' / 'systemd'
+    systemd_user_unit_dir = systemd_base_unit_dir / 'user'
+    systemd_system_unit_dir = systemd_base_unit_dir / 'system'
 endif
 
 opt_dirs = [
