gitlab: skip tests on ubuntu 18.04
Ubuntu 18.04 has a packaging bug leaving the 'cpu_map.xml' file in
the wrong package. We have a workaround for that when generating
the containers but this is inconvenient when switching to use the
'lcitool manifest' command.

In this change we simply skip tests on Ubuntu 18.04 platform instead

Signed-off-by: Daniel P. Berrangé <berrange@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -228,6 +228,7 @@ x64-ubuntu-1804-dist-build:
     - x64-ubuntu-1804-container
   variables:
     NAME: ubuntu-1804
+    TESTS: skip
 
 x64-ubuntu-2004-dist-build:
   <<: *dist_native_build_job_definition
