--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,9 +79,9 @@ include: '/ci/gitlab.yml'
 coverity:
   extends: .gitlab_native_build_job
   variables:
-    NAME: centos-8
+    NAME: almalinux-8
   needs:
-    - x86_64-centos-8-container
+    - x86_64-almalinux-8-container
   script:
     - curl https://scan.coverity.com/download/linux64 --form project=$COVERITY_SCAN_PROJECT_NAME --form token=$COVERITY_SCAN_TOKEN -o /tmp/cov-analysis-linux64.tgz
     - tar xfz /tmp/cov-analysis-linux64.tgz
