--- a/ci/manifest.yml
+++ b/ci/manifest.yml
@@ -22,13 +22,34 @@ targets:
         template: .native_git_build_job
         suffix: -git
 
+  centos-stream-9:
+    projects:
+      - libvirt-dbus
+      - libvirt+minimal
+      - libvirt-glib
+
+    jobs:
+      - arch: x86_64
+        template: .native_git_build_job
+        suffix: -git
+
   debian-10: x86_64
+
+  debian-11: x86_64
 
   debian-sid: x86_64
 
   fedora-34: x86_64
 
+  fedora-35: x86_64
+
   fedora-rawhide: x86_64
+
+  opensuse-leap-153:
+    jobs:
+      - arch: x86_64
+        variables:
+          RPM: skip
 
   opensuse-tumbleweed:
     jobs:
@@ -37,3 +58,5 @@ targets:
           RPM: skip
 
   ubuntu-2004: x86_64
+
+  ubuntu-2204: x86_64
