ci: Add AlmaLinux 8
It will serve as the replacement for CentOS 8.

Signed-off-by: Andrea Bolognani <abologna@redhat.com>

--- a/ci/gitlab.yml
+++ b/ci/gitlab.yml
@@ -50,6 +50,13 @@ check-dco:
 
 # Native container jobs
 
+x86_64-almalinux-8-container:
+  extends: .container_job
+  allow_failure: false
+  variables:
+    NAME: almalinux-8
+
+
 x86_64-centos-8-container:
   extends: .container_job
   allow_failure: false
@@ -128,6 +135,15 @@ x86_64-ubuntu-2004-container:
 
 
 # Native build jobs
+
+x86_64-almalinux-8:
+  extends: .native_build_job
+  needs:
+    - x86_64-almalinux-8-container
+  allow_failure: false
+  variables:
+    NAME: almalinux-8
+
 
 x86_64-centos-8:
   extends: .native_build_job
