spec: add systemd-rpm-macros as build dependency
We use `%{_unitdir}` in our spec file and as described in the Systemd
packaging guidelines [1] we need to explicitly depend on
systemd-rpm-macros.

[1] <https://docs.fedoraproject.org/en-US/packaging-guidelines/Systemd/#packaging>

Signed-off-by: Pavel Hrdina <phrdina@redhat.com>

--- a/libvirt-dbus.spec.in
+++ b/libvirt-dbus.spec.in
@@ -20,6 +20,7 @@ BuildRequires: glib2-devel >= %{glib2_version}
 BuildRequires: libvirt-devel >= %{libvirt_version}
 BuildRequires: libvirt-glib-devel >= %{libvirt_glib_version}
 BuildRequires: python3-docutils
+BuildRequires: systemd-rpm-macros
 
 Requires: dbus
 Requires: glib2 >= %{glib2_version}
